5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1582_1560.log
== SUBMITION (2019-03-12 16:59:44) 
-- CODE:
string = ""
print(string.?"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."??)
-- EXECUTION TIME:
0.217286
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 2
    print(string.?"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."??)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:59:47) 
-- CODE:
string = ""
print(string.?"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."??)
-- ERROR:
File "XXXX", line 2
    print(string.?"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."??)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 16:59:57) 
-- CODE:
string = ""
print(string.?"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
-- EXECUTION TIME:
0.117395
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 2
    print(string.?"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:00:56) 
-- CODE:
print."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower()
-- EXECUTION TIME:
0.170432
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower()
                                                                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:00:59) 
-- CODE:
print."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower()
-- ERROR:
File "XXXX", line 1
    print."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower()
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:01:34) 
-- CODE:
print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower)
-- EXECUTION TIME:
0.165074
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:01:45) 
-- CODE:
print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower
-- EXECUTION TIME:
0.137638
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:01:47) 
-- CODE:
print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower
-- ERROR:
File "XXXX", line 1
    print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:02:32) 
-- CODE:
print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower")
-- EXECUTION TIME:
0.205328
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower")
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:02:34) 
-- CODE:
print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower")
-- ERROR:
File "XXXX", line 1
    print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:02:56) 
-- CODE:
print.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower)
-- EXECUTION TIME:
0.181306
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:02:59) 
-- CODE:
print.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower)
-- ERROR:
File "XXXX", line 1
    print.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:03:38) 
-- CODE:
print.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower)
-- EXECUTION TIME:
0.245862
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:03:40) 
-- CODE:
print.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower)
-- ERROR:
File "XXXX", line 1
    print.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:20:37) 
-- CODE:
print.(''Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.''lower)
-- ERROR:
File "XXXX", line 1
    print.(''Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.''lower)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:20:39) 
-- CODE:
print.(''Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.ower)
-- EXECUTION TIME:
0.130563
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.(''Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.ower)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:20:39) 
-- CODE:
print.(''Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.ower)
-- EXECUTION TIME:
0.138362
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.(''Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.ower)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:20:40) 
-- CODE:
print.(''Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.ower)
-- EXECUTION TIME:
0.160256
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.(''Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.ower)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:24:30) 
-- CODE:
print.("augusta ada byron, a condessa de lovelace, nasceu em 1815, na Inglaterra.")
-- ERROR:
File "XXXX", line 1
    print.("augusta ada byron, a condessa de lovelace, nasceu em 1815, na Inglaterra.")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:24:30) 
-- CODE:
print.("augusta ada byron, a condessa de lovelace, nasceu em 1815, na Inglaterra.")
-- ERROR:
File "XXXX", line 1
    print.("augusta ada byron, a condessa de lovelace, nasceu em 1815, na Inglaterra.")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:32:41) 
-- CODE:
print.(.lower()"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
-- ERROR:
File "XXXX", line 1
    print.(.lower()"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:32:47) 
-- CODE:
print.(.lower()"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
-- ERROR:
File "XXXX", line 1
    print.(.lower()"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:32:47) 
-- CODE:
print.(.lower()"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
-- EXECUTION TIME:
0.125233
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.(.lower()"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:33:15) 
-- CODE:
print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:33:15) 
-- CODE:
print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:33:15) 
-- CODE:
print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:33:15) 
-- CODE:
print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:33:15) 
-- CODE:
print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:33:17) 
-- CODE:
print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.173904
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:33:19) 
-- CODE:
print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.202237
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:33:19) 
-- CODE:
print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.184211
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:33:21) 
-- CODE:
print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.124611
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:39:59) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:40:17) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:40:17) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:40:17) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:40:17) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:40:17) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:40:18) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.264583
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:40:18) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.287386
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:40:18) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.155996
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:40:18) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.278778
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:40:19) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.288533
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/1560/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:40:19) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME:
0.283608
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/1560/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:40:21) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:40:27) 
-- CODE:
print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 1
    print.((.lower"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:41:06) 
-- CODE:
print.(("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower)
-- ERROR:
File "XXXX", line 1
    print.(("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:36:12) 
-- CODE:
frase=
print.("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower)
-- ERROR:
File "XXXX", line 1
    frase=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:37:07) 
-- CODE:
frase=
print((frase.lower)"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").
-- ERROR:
File "XXXX", line 1
    frase=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:37:14) 
-- CODE:
frase=
print((frase.lower)"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").
-- EXECUTION TIME:
0.150394
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 1
    frase=
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:37:52) 
-- CODE:
frase=
print(.lowe)r"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").
-- ERROR:
File "XXXX", line 1
    frase=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:38:02) 
-- CODE:
frase=
print((.lowe)r"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").
-- ERROR:
File "XXXX", line 1
    frase=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:38:25) 
-- CODE:
frase=
print((.lower)"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").
-- ERROR:
File "XXXX", line 1
    frase=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:39:38) 
-- CODE:
frase="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print((.lower)"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").
-- ERROR:
File "XXXX", line 2
    print((.lower)"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:39:41) 
-- CODE:
frase="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print((.lower)"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").
-- ERROR:
File "XXXX", line 2
    print((.lower)"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:40:15) 
-- CODE:
frase="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(.lower)
-- ERROR:
File "XXXX", line 2
    print(.lower)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:41:22) 
-- CODE:
frase="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(frase.lower)
-- OUTPUT:
<built-in method lower of str object at 0x7faaf077f730>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:41:51) 
-- CODE:
frase="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(frase.lower)
-- EXECUTION TIME:
0.152863
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
<built-in method lower of str object at 0x7f39005439b0>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:42:10) 
-- CODE:
frase="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(frase.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:42:23) 
-- CODE:
frase="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(frase.lower())
-- EXECUTION TIME:
0.145671
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
